# Distributed-Key-Value-Store

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  gRPCinstall.sh  plan.txt  rocksdb_install.sh  test_installations.sh
key_value_store/: CMakeLists.txt  Dockerfile  compile.sh  gRPCinstall.sh  nuraft.sh
key_value_store/NuRaft/examples/: quick_start.cxx
key_value_store/protofiles/: gRPC_Communication.proto
key_value_store/src/: api.cpp  api.h  api_sync.cpp  api_sync.h  client.cpp  client.h  log_store_impl.cpp  main.cpp  main_launcher.cpp  store.cpp  store.h
key_value_store/src/Raft/: CMakeLists.txt  in_mem_log_store.cpp  in_mem_log_store.h  in_mem_state_manager.cpp  in_mem_state_manager.h  state_machine.cpp  state_machine.h
key_value_store/src/raft/: CMakeLists.txt  log_store.h  log_store.tpp  raft_manager.cpp  raft_manager.h  raft_manager.tpp  raft_server.h  raft_server.tpp
key_value_store/test/: CMakeLists.txt  api_test.cpp  raft_manager_test.cpp  store_test.cpp
key_value_store/test/raft_tests/: temp.cpp
protofiles/: gRPC_Communication.proto  generate_cpp.sh
src/: api.cpp  client.cpp  client.h  log_store_impl.cpp  main.cpp  store.h
src/raft/: CMakeLists.txt  log_store.h  log_store.tpp  raft_dtypes.cpp  raft_dtypes.h  raft_manager.cpp  raft_manager.h  raft_manager_callback.h  raft_server.cpp  raft_server.h  raft_server.tpp
src/raft/cluster/: cluster_manager.cpp  cluster_manager.h
src/raft/election/: election.cpp  election.h
src/raft/failure_handler/: commit_log.h  snapshot_handler.h
src/raft/heartbeat/: heartbeat_sensor.cpp  heartbeat_sensor.h
src/raft/kv_api/: api.cpp  api.h
src/raft/network/: rpc_calls.cpp  rpc_calls.h
src/raft/queue/: log_queue.cpp  log_queue.h  loq_queue.cpp  store.cpp  store.h
src/raft/state/: raft_state.h
test/: api_test.cpp  raft_manager_test.cpp
